@@ -1,23 +1,15 @@
 package io.github.mcalgovisualizations;
 
-import io.github.mcalgovisualizations.algorithms.PlayerBSTSearch;
-import io.github.mcalgovisualizations.algorithms.PlayerInsertion;
-import io.github.mcalgovisualizations.algorithms.PlayerTSTSearch;
-import io.github.mcalgovisualizations.algorithms.PlayerUnorderedTree;
+import io.github.mcalgovisualizations.algorithms.*;
 import io.github.mcalgovisualizations.algorithms.context.GridContext;
 import io.github.mcalgovisualizations.algorithms.context.SortingContext;
 import io.github.mcalgovisualizations.config.MapConstants;
+import io.github.mcalgovisualizations.events.CellStateTransition;
 import io.github.mcalgovisualizations.events.Compare;
 import io.github.mcalgovisualizations.events.Message;
 import io.github.mcalgovisualizations.events.Swap;
-import io.github.mcalgovisualizations.handlers.BstCompareHandler;
-import io.github.mcalgovisualizations.handlers.CompareHandler;
-import io.github.mcalgovisualizations.handlers.MessageHandler;
-import io.github.mcalgovisualizations.handlers.SwapHandler;
-import io.github.mcalgovisualizations.layouts.BSTNodeLayout;
-import io.github.mcalgovisualizations.layouts.FloatingLinearLayout;
-import io.github.mcalgovisualizations.layouts.TSTNodeLayout;
-import io.github.mcalgovisualizations.layouts.UnorderedTreeLayout;
+import io.github.mcalgovisualizations.handlers.*;
+import io.github.mcalgovisualizations.layouts.*;
 import io.github.mcalgovisualizations.visualization.AlgoCraft;
 import io.github.mcalgovisualizations.visualization.Algorithm;
 import io.github.mcalgovisualizations.visualization.renderer.dispatch.AnimationPlan;
@@ -27,7 +19,6 @@ import net.minestom.server.item.Material;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static io.github.mcalgovisualizations.config.MapConstants.*;
@@ -40,8 +31,8 @@ public class RegisterAlgo {
     }
 
     private static void registerSortingAlgo(AlgoCraft algo) {
-        var integerCollection1 = new SortingContext<>(Arrays.asList(3, 7, 8, 1, 6, 4, 9, 5, 2));
-        var stringCollection1 = new SortingContext<>(Arrays.asList("a", "b", "k", "x", "d", "h", "a", "b", "e"));
+        var integerCollection1 = new SortingContext<>(new ArrayList<>(List.of(3, 7, 8, 1, 6, 4, 9, 5, 2)));
+        var stringCollection1 = new SortingContext<>(new ArrayList<>(List.of("a", "b", "k", "x", "d", "h", "a", "b", "e")));
 
         algo.registerAlgorithm(
                 Algorithm.builder(integerCollection1)
@@ -55,10 +46,6 @@ public class RegisterAlgo {
                                 Material.IRON_SWORD,
                                 "Time: O(n^2) | Space: O(1)", "the final sorted array one item at a time.", "A simple sorting algorithm that builds"
                         ))
-                        .withContextFactory(SortingContext::new, ArrayList::new, lst -> {
-                            Collections.shuffle(lst);
-                            return lst;
-                        })
                         .create()
         );
 
@@ -74,10 +61,6 @@ public class RegisterAlgo {
                         ))
                         .onEvent(Compare.class, new CompareHandler())
                         .onEvent(Swap.class, new SwapHandler())
-                        .withContextFactory(SortingContext::new, ArrayList::new, lst -> {
-                            Collections.shuffle(lst);
-                            return lst;
-                        })
                         .create()
         );
 
@@ -95,10 +78,6 @@ public class RegisterAlgo {
                         ))
                         .onEvent(Compare.class, new CompareHandler())
                         .onEvent(Swap.class, new SwapHandler())
-                        .withContextFactory(SortingContext::new, ArrayList::new, lst -> {
-                            Collections.shuffle(lst);
-                            return lst;
-                        })
                         .create()
 
         );
@@ -189,79 +168,103 @@ public class RegisterAlgo {
 
 
     private static void registerPathFindingAlgo(AlgoCraft algo) {
-//        final int gridX = 20;
-//        final int gridY = 20;
-//        var aStarGrid = buildPathGrid(gridX, gridY);
-//        algo.registerAlgorithm(
-//                Algorithm.build(aStarGrid, ctx -> ctx
-//                        .withIdentity("a* pathfinding (4-way)", () -> new PlayerAStar(gridX))
-//                        .positioning(new GridLayout(gridX), ASTAR_2D_PLACEMENT)
-//                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
-//                        .onEvent(Message.class, new MessageHandler())
-//                        .withPresentation(new AlgorithmPresentation(
-//                                "A* Pathfinding",
-//                                Material.COMPASS,
-//                                "Time: O(E log V) | Space: O(V)",
-//                                "Colors show open, closed, and final path.",
-//                                "4-way A* on a fixed 2D obstacle map"
-//                        ))
-//                        .withScene(GridScene::new)
-//                        .withContextFactory(
-//                                s -> new GridContext(s)
-//                        )
-//                )
-//        );
-//
-//        algo.registerAlgorithm(
-//                Algorithm.build(null, ctx -> ctx
-//                        .withIdentity("bfs pathfinding (4-way)", () -> new PlayerBFS(gridX))
-//                        .withData(aStarGrid)
-//                        .positioning(new GridLayout(gridX), BFS_2D_PLACEMENT)
-//                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
-//                        .onEvent(Message.class, new MessageHandler())
-//                        .withPresentation(new AlgorithmPresentation(
-//                                "BFS Pathfinding",
-//                                Material.RECOVERY_COMPASS,
-//                                "Time: O(V + E) | Space: O(V)",
-//                                "Queue-based level-by-level expansion.",
-//                                "4-way BFS explores breadth-first"
-//                        ))
-//                        .withScene(GridScene::new)
-//                )
-//        );
-//
-//        algo.registerAlgorithm(
-//                Algorithm.build(ctx -> ctx
-//                        .withIdentity("dfs pathfinding (4-way)", () -> new PlayerDFS(gridX))
-//                        .withData(aStarGrid)
-//                        .positioning(new GridLayout(gridX), DFS_2D_PLACEMENT)
-//                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
-//                        .onEvent(Message.class, new MessageHandler())
-//                        .withPresentation(new AlgorithmPresentation(
-//                                "DFS Pathfinding",
-//                                Material.LOOM,
-//                                "Time: O(V + E) | Space: O(V)",
-//                                "Stack-based backtracking expansion.",
-//                                "4-way DFS explores depth-first"
-//                        ))
-//                        .withScene(GridScene::new)
-//                )
-//        );
-//
-//        algo.registerAlgorithm(
-//                Algorithm.build(ctx -> ctx
-//                        .withIdentity("greedy best-first (4-way)", () -> new PlayerGreedyBestFirst(gridX))
-//                        .withData(aStarGrid)
-//                        .positioning(new GridLayout(gridX), GREEDY_2D_PLACEMENT)
-//                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
-//                        .onEvent(Message.class, new MessageHandler())
-//                        .withPresentation(new AlgorithmPresentation(
-//                                "Greedy Best-First",
-//                                Material.REDSTONE_TORCH,
-//                                "Time: O(E log V) | Space: O(V)", "Prioritizes closeness to goal, may miss optimal paths.", "Fast heuristic-only pathfinding"
-//                        ))
-//                        .withScene(GridScene::new)
-//                )
-//        );
+        final int gridX = 20;
+        final int gridY = 20;
+        var aStarGrid = buildPathGrid(gridX, gridY);
+        algo.registerAlgorithm(
+                Algorithm.builder(aStarGrid)
+                        .withIdentity("a* pathfinding (4-way)", () -> new PlayerAStar(gridX))
+                        .positioning(new GridLayout(gridX), ASTAR_2D_PLACEMENT)
+                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
+                        .onEvent(Message.class, new MessageHandler())
+                        .withPresentation(new AlgorithmPresentation(
+                                "A* Pathfinding",
+                                Material.COMPASS,
+                                "Time: O(E log V) | Space: O(V)",
+                                "Colors show open, closed, and final path.",
+                                "4-way A* on a fixed 2D obstacle map"
+                        ))
+                        .withScene(GridScene::new)
+                        .create()
+        );
+
+        algo.registerAlgorithm(
+                Algorithm.builder(aStarGrid)
+                        .withIdentity("bfs pathfinding (4-way)", () -> new PlayerBFS(gridX))
+                        .positioning(new GridLayout(gridX), BFS_2D_PLACEMENT)
+                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
+                        .onEvent(Message.class, new MessageHandler())
+                        .withPresentation(new AlgorithmPresentation(
+                                "BFS Pathfinding",
+                                Material.RECOVERY_COMPASS,
+                                "Time: O(V + E) | Space: O(V)",
+                                "Queue-based level-by-level expansion.",
+                                "4-way BFS explores breadth-first"
+                        ))
+                        .withScene(GridScene::new)
+                        .create()
+        );
+
+        algo.registerAlgorithm(
+                Algorithm.builder(aStarGrid)
+                        .withIdentity("dfs pathfinding (4-way)", () -> new PlayerDFS(gridX))
+                        .positioning(new GridLayout(gridX), DFS_2D_PLACEMENT)
+                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
+                        .onEvent(Message.class, new MessageHandler())
+                        .withPresentation(new AlgorithmPresentation(
+                                "DFS Pathfinding",
+                                Material.LOOM,
+                                "Time: O(V + E) | Space: O(V)",
+                                "Stack-based backtracking expansion.",
+                                "4-way DFS explores depth-first"
+                        ))
+                        .withScene(GridScene::new)
+                        .create()
+        );
+
+        algo.registerAlgorithm(
+                Algorithm.builder(aStarGrid)
+                        .withIdentity("greedy best-first (4-way)", () -> new PlayerGreedyBestFirst(gridX))
+                        .positioning(new GridLayout(gridX), GREEDY_2D_PLACEMENT)
+                        .onEvent(CellStateTransition.class, new CellStateTransitionHandler())
+                        .onEvent(Message.class, new MessageHandler())
+                        .withPresentation(new AlgorithmPresentation(
+                                "Greedy Best-First",
+                                Material.REDSTONE_TORCH,
+                                "Time: O(E log V) | Space: O(V)", "Prioritizes closeness to goal, may miss optimal paths.", "Fast heuristic-only pathfinding"
+                        ))
+                        .withScene(GridScene::new)
+                        .create()
+        );
+    }
+
+    private static GridContext<Integer> buildPathGrid(int xSize, int ySize) {
+        if (xSize <= 0 || ySize <= 0) {
+            throw new IllegalArgumentException("Grid dimensions must be > 0");
+        }
+
+        ArrayList<Integer> grid = new ArrayList<>(xSize * ySize);
+        final int wallPercent = 30;
+
+        for (int y = 0; y < ySize; y++) {
+            for (int x = 0; x < xSize; x++) {
+                int value;
+                if (x == 0 && y == 0) {
+                    value = 2; // src at (0,0)
+                } else if (x == xSize - 1 && y == ySize - 1) {
+                    value = 3; // dst at (n,n)
+                } else if (y == 0 || x == xSize - 1) {
+                    // Keep one guaranteed open corridor: top row -> right column.
+                    value = 0;
+                } else {
+                    // Deterministic pseudo-random wall placement so each size has a stable maze.
+                    int noise = Math.floorMod((x * 37) + (y * 57) + (x * y * 11), 100);
+                    value = noise < wallPercent ? 1 : 0;
+                }
+                grid.add(value);
+            }
+        }
+
+        return new GridContext<>(grid);
     }
 }
